--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>The great <span id ="colorDisplay">RGA</span>Game</h1>
+    <h1 id="correct"></h1>
 <div id="container">
     <div class="square"></div>
     <div class="square"></div>
