--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>The great <span id ="colorDisplay">RGA</span>Game</h1>
     <div id="stripe">
-        <button>New colors</button>
+        <button id = "reset">New colors</button>
         <h1 id="correct"></h1>
     </div>
 <div id="container">
