added extreme level

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
     <span id="message"></span>
     <button id="easyBtn" class="mode">Easy</button>
     <button id="hardBtn" class="mode selected">Hard</button>
+    <button id="extremeBtn" class="mode">Extreme</button>
 </div>
 
 <div id="container">
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
